# flask-elastic

./: .gitignore  README.md  pyproject.toml  wsgi.py
flask_elastic/: __init__.py  app.py  data.py  elastic_util.py  endpoints.py
